fix: footer invisible avant createCSE

--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ footer {
 	margin-top: 3em;
 	border-top: 1px solid #bbb;
 	padding-top: 1em;
+    visibility: hidden;
 }
 
 footer a {
